bin_PROGRAMS = svinet
svinet_SOURCES = gammapoisson.hh gammapoisson.cc\
	mmsbinfer.hh mmsbinfer.cc\
	linksampling.hh	linksampling.cc\
	matrix.hh env.hh log.cc log.hh\
	network.cc network.hh\
	thread.hh thread.cc\
	mmsbinferorig.hh mmsbinferorig.cc\
	fastamm.cc fastamm.hh\
	fastamm-sparsek.cc fastamm-sparsek.hh\
	sbm.hh sbm.cc\
	fastamm2.cc fastamm2.hh\
	mmsbgen.cc mmsbgen.hh\
	mmsborig.cc mmsborig.hh\
	mmsb.cc \
	tsqueue.hh fastqueue.hh community.hh
